create a workspace file
for VS Code

--- a/src/.vscode/tasks.json
+++ b/src/.vscode/tasks.json
@@ -5,10 +5,7 @@
             "label": "build",
             "command": "dotnet",
             "type": "process",
-            "args": [
-                "build",
-                "${workspaceFolder}/Ex2/NewTask/NewTask.csproj"
-            ],
+            "args": [],
             "problemMatcher": "$msCompile"
         }
     ]
